[package]
name = "rust_cmd"
version = "0.1.0"
edition = "2024"
authors = ["zhangdi"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
base64 = "0.22.1"
strum_macros = "0.27.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
strum = { version = "0.27.2", features = ["derive"] }