[package]
name = "rust_cmd"
version = "0.1.0"
edition = "2024"
authors = ["zhangdi"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["serde"] }
kamadak-exif = "0.6.1"
walkdir = "2.5.0"
sha2 = "0.10.9"
bloomfilter = "3.0.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "rt", "macros"] }
